force-app/main/default/objects/LLM_Provider__mdt/LLM_Provider__mdt.object-meta.xml
<CustomObject>
    <label>LLM Provider</label>
    <pluralLabel>LLM Providers</pluralLabel>
</CustomObject>