force-app/main/default/objects/LLM_Provider__mdt/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <label>Base URL</label>
    <type>Url</type>
</CustomField>