force-app/main/default/objects/LLM_Provider__mdt/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <description>Name of the LLM Model.</description>
    <inlineHelpText>Name of the LLM Model.</inlineHelpText>
    <label>Model Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>