force-app/main/default/objects/LLM_Provider__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Named Credential used for model authorization</description>
    <inlineHelpText>Named Credential used for model authorization</inlineHelpText>
    <label>Named Credential</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>