force-app/main/default/objects/LLM_Provider__mdt/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <label>Provider Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anthropic</fullName>
                <default>true</default>
                <label>Anthropic</label>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>OpenAI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>