force-app/main/default/objects/LLM_Provider__mdt/fields/Reasoning_Effort__c.field-meta.xml
<CustomField>
    <fullName>Reasoning_Effort__c</fullName>
    <description>Reasoning effort for Responses-API reasoning models (gpt-5.x, o-series): minimal, low, medium, or high. Leave blank for non-reasoning models (e.g. gpt-4o), which reject the reasoning parameter.</description>
    <inlineHelpText>Reasoning effort for reasoning models (minimal/low/medium/high). Leave blank for non-reasoning models like gpt-4o.</inlineHelpText>
    <label>Reasoning Effort</label>
    <length>20</length>
    <type>Text</type>
</CustomField>